[gd_scene load_steps=7 format=2]

[ext_resource path="res://player/player.gd" type="Script" id=1]
[ext_resource path="res://sounds/jump.wav" type="AudioStream" id=2]
[ext_resource path="res://sounds/dekonn.wav" type="AudioStream" id=3]
[ext_resource path="res://sounds/konn.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]

custom_solver_bias = 0.0
extents = Vector2( 50, 50 )

[sub_resource type="CircleShape2D" id=2]

custom_solver_bias = 0.0
radius = 150.0

[node name="player" type="KinematicBody2D" index="0" groups=[
"player",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )

[node name="main_shape" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )

[node name="Polygon2D" type="Polygon2D" parent="." index="1"]

polygon = PoolVector2Array( 50, 50, 50, -50, -50, -50, -50, 50 )
uv = PoolVector2Array(  )
color = Color( 0.114441, 0.585938, 0.331771, 1 )
vertex_colors = PoolColorArray(  )
offset = Vector2( 0, 0 )
antialiased = false
texture = null
texture_offset = Vector2( 0, 0 )
texture_scale = Vector2( 1, 1 )
texture_rotation_degrees = 0.0
invert_enable = false
invert_border = 100.0

[node name="Camera2D" type="Camera2D" parent="." index="2"]

anchor_mode = 1
rotating = false
current = true
zoom = Vector2( 1, 1 )
limit_left = -10000000
limit_top = -10000000
limit_right = 10000000
limit_bottom = 10000000
limit_smoothed = false
drag_margin_h_enabled = true
drag_margin_v_enabled = false
smoothing_enabled = false
smoothing_speed = 5.0
offset_v = 0.0
offset_h = 0.0
drag_margin_left = 0.2
drag_margin_top = 0.2
drag_margin_right = 0.2
drag_margin_bottom = 0.2
editor_draw_screen = true
editor_draw_limits = false
editor_draw_drag_margin = false

[node name="Area2D" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D" index="0"]

shape = SubResource( 2 )

[node name="line" type="Line2D" parent="." index="4"]

z_index = 100
points = PoolVector2Array( 0, 0, 100, 0 )
width = 10.0
default_color = Color( 0.0196078, 0.568627, 0.823529, 0.501961 )
texture_mode = 2949152
joint_mode = 2
begin_cap_mode = 2
end_cap_mode = 2
sharp_limit = 1.0
round_precision = 8
_sections_unfolded = [ "Fill" ]

[node name="jumpSFX" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 2 )
volume_db = -25.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="dekonnSFX" type="AudioStreamPlayer" parent="." index="6"]

stream = ExtResource( 3 )
volume_db = -25.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="konnSFX" type="AudioStreamPlayer" parent="." index="7"]

stream = ExtResource( 4 )
volume_db = -25.0
pitch_scale = 1.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]

[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]


